--- a/ppc-dashboard-snippet.html
+++ b/ppc-dashboard-snippet.html
@@ -314,7 +314,7 @@
         (function() {
             'use strict';
 
-            // Configuration - UPDATE THIS WITH YOUR GITHUB RAW URL
+            // Configuration - UPDATED WITH YOUR GITHUB REPOSITORY
             const CONFIG = {
                 dataUrl: 'https://raw.githubusercontent.com/alistermapholisa/ppc-campaign-month-to-month-analysis-dashbord/main/data.json',
                 refreshInterval: 3600000 // 1 hour in milliseconds
